# DMGTTM

./: .env.example  .gitignore  AGENTS.md  DMconfig.yml  Dockerfile  Makefile  README.md  compose.yml  design.yaml  opencode.json  package-lock.json  pyproject.toml  requirements.txt  server_main.py  start-dmgttm.bat  tailwind.config.js
check/: check.py
config/: letta-index.json  letta.json
data/: vuegraphs.db  warbands.db
entity/configs/edge/: edge_condition.py  edge_processor.py
entity/configs/node/: agent.py  memory.py  thinking.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: Sidebar.vue  VaultCard.json
frontend/src/pages/: BestiaryView.vue  HomeView.vue  MagicItemsView.vue  SpellsView.vue  WarbandDetailView.vue  WarbandsView.vue
frontend/src/router/: index.js
projects/MonsterSquad/: design.yaml  requirements.txt
projects/dmgttmd/: design.yaml  dmgttmd.yaml
runtime/: __init__.py
schema_registry/: __init__.py  registry.py
server/: __init__.py  app.py  bootstrap.py
server/routes/: __init__.py  dm.py  health.py
src/: jsconfig.json  package-lock.json  package.json  tailwind.config.js
src/.next/: trace
src/.next/server/: server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
src/app/: Spellbook.module.css  globals.css  layout.js  new 3.json  page.js  variables.css
src/components/: ConditionTracker.jsx  CreatureSearch.js  DiceRoller.jsx  EncounterCard.jsx  EncounterHUD.jsx  LegendaryTracker.jsx  LootGenerator.jsx  MonsterStatBlock.jsx  PdfIndexer.jsx  PlanarEncounterWeaver.js  ScryingPool.jsx  SearchAutocomplete.jsx  SpellTooltip.jsx  StatBlock.jsx  TacticalHUD.jsx  VibeControl.jsx  WarbandTile.js
src/hooks/: usePlanarEncounter.js  useVaultSearch.js
src/pages/: Vault.jsx  _app.js  oldindex.old.js
src/utils/: RegexEngine.js
tests/: conftest.py  test_dm.py  test_health.py  test_workflows_yaml.py
utils/: validator_utils.py.py
workflow/: dynamic_edge_utils.py  graph.py
yaml_instance/: DMconfig.yml  GameDev_with_manager.yaml
yaml_instance/subgraphs/: react_agent.yaml  reflexion_loop.yaml
(+23 files in other folders)
