[project]
name = "DMGTTM"
version = "1.0.0"
description = "Dungeon Master Guide to the Multiverse — D&D 5e companion web app"
readme = "README.md"
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
requires-python = ">=3.12"
authors = [{ name = "DMGTTM Team" }]
dependencies = [
    "pyyaml",
    "fastapi==0.124.0",
    "click>=8.1.8,<8.3",
    "uvicorn",
    "pydantic==2.12.5",
    "requests",
    "httpx",
    "pytest",
    "chardet>=5.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server/"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.uv]
package = false
